docs: :memo: Update JVM recommended arguments